# python-skeleton

./: cookiecutter.json
{{cookiecutter.project_slug}}/: README.md  justfile  pyproject.toml
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py
