[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
readme = "README.md"
authors = [
    { name = "Andrew McKenzie", email = "url54.andrew@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
{{ cookiecutter.project_slug.lower().replace('_', '-') }} = "{{ cookiecutter.project_slug }}:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest",
    "pyright",
    "ruff"
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
# This is the "Strict OOP" list
select = [
    "E",    # Errors (standard)
    "F",    # Flake8 (standard)
    "I",    # Isort (imports sorting)
    "B",    # Bugbear (catches bad design patterns)
    "UP",   # Pyupgrade (modern syntax)
    "N",    # PEP8 Naming (class Capitalization, variable_naming)
    "D",    # Pydocstyle (enforces docstrings)
    "ANN",
]
ignore = []

[tool.ruff.lint.pydocstyle]
convention = "google"